Задание №2.1
