# app/Http/Requests/OrderStoreRequest.php
@@ -19,7 +19,11 @@ class OrderStoreRequest extends FormRequest
             'ticket_adult_price' => 'required|integer|gt:0',
             'ticket_adult_quantity' => 'required|integer',
             'ticket_kid_price' => 'required|integer|gt:0',
-            'ticket_kid_quantity' => 'required|integer'
+            'ticket_kid_quantity' => 'required|integer',
+            'ticket_concessionary_price' => 'nullable|required_with:ticket_concessionary_quantity|integer|gt:0',
+            'ticket_concessionary_quantity' => 'nullable|integer',
+            'ticket_group_price' => 'nullable|required_with:ticket_group_quantity|integer|gt:0',
+            'ticket_group_quantity' => 'nullable|integer',
         ];
     }
 }
