# public/docs/openapi.yaml
@@ -26,27 +26,43 @@ paths:
                 event_id:
                   type: integer
                   description: ''
-                  example: 9
+                  example: 12
                 event_date:
                   type: string
                   description: 'Must be a valid date.'
-                  example: '2024-10-30T16:58:49'
+                  example: '2024-10-30T18:02:46'
                 ticket_adult_price:
                   type: integer
                   description: ''
-                  example: 1
+                  example: 7
                 ticket_adult_quantity:
                   type: integer
                   description: ''
-                  example: 11
+                  example: 13
                 ticket_kid_price:
                   type: integer
                   description: ''
-                  example: 5
+                  example: 12
                 ticket_kid_quantity:
                   type: integer
                   description: ''
                   example: 8
+                ticket_concessionary_price:
+                  type: integer
+                  description: 'This field is required when <code>ticket_concessionary_quantity</code> is present.'
+                  example: 13
+                ticket_concessionary_quantity:
+                  type: integer
+                  description: ''
+                  example: 14
+                ticket_group_price:
+                  type: integer
+                  description: 'This field is required when <code>ticket_group_quantity</code> is present.'
+                  example: 7
+                ticket_group_quantity:
+                  type: integer
+                  description: ''
+                  example: 19
               required:
                 - event_id
                 - event_date
